@@ -1,13 +1,14 @@
 // SPDX-License-Identifier: GPL-2.0-or-later
 // Copyright The Music Player Daemon Project
 
-#ifndef MPD_FFMPEG_FILTER__HXX
-#define MPD_FFMPEG_FILTER__HXX
+#pragma once
 
 #include "filter/Filter.hxx"
 #include "lib/ffmpeg/Buffer.hxx"
 #include "lib/ffmpeg/Filter.hxx"
 #include "lib/ffmpeg/Frame.hxx"
+
+#include <cstdint>
 
 /**
  * A #Filter implementation using FFmpeg's libavfilter.
@@ -29,6 +30,11 @@ class FfmpegFilter final : public Filter {
 
 	const size_t in_audio_frame_size;
 	const size_t out_audio_frame_size;
+
+	/**
+	 * Presentation timestamp.  A counter for `AVFrame::pts`.
+	 */
+	int_least64_t pts = 0;
 
 	bool flushed = false;
 
@@ -53,5 +59,3 @@ public:
 private:
 	std::span<const std::byte> ReadOutput();
 };
-
-#endif
